welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: value setPos is not a member of Unit
possible cause: maybe a semicolon is missing before `value setPos'?
  }setPos(6,6)
   ^